logica do pedido concluída, pagina de finalização de compra feita

--- a/views/home/carrinho.ejs
+++ b/views/home/carrinho.ejs
@@ -66,22 +66,22 @@
           <form action="/carrinho/finalizacao" method="POST">
             <div class="formas-pgto">
               <i class="fa-brands fa-pix"></i>
-              <input type="radio" name="pagamento" value="pix" />
+              <input type="radio" name="pagamento" value="Pix" />
               <label for="pix">PIX</label>
             </div>
             <div class="formas-pgto">
               <i class="fa-solid fa-wallet"></i>
-              <input type="radio" name="pagamento" value="boleto" />
+              <input type="radio" name="pagamento" value="Boleto" />
               <label for="boleto">Boleto</label>
             </div>
             <div class="formas-pgto">
               <i class="fa-solid fa-credit-card"></i>
-              <input type="radio" name="pagamento" value="cartao" />
+              <input type="radio" name="pagamento" value="Cartão" />
               <label for="cartao">Cartão</label>
             </div>
             <div class="formas-pgto">
               <i class="fa-solid fa-money-bill-transfer"></i>
-              <input type="radio" name="pagamento" value="picpay" />
+              <input type="radio" name="pagamento" value="Picpay" />
               <label for="picpay">PicPay</label>
             </div>
           
@@ -93,12 +93,12 @@
           
           <div class="forma-entrega">
             <i class="fa-solid fa-truck"></i>
-            <input type="radio" name="entrega" value="normal" />
+            <input type="radio" name="entrega" value="Normal" />
             <label for="normal">Normal</label>
           </div>
           <div class="forma-entrega">
             <i class="fa-solid fa-truck-fast"></i>
-            <input type="radio" name="entrega" value="expressa" />
+            <input type="radio" name="entrega" value="Expressa" />
             <label for="expressa">Expressa</label>
           
           </div>
@@ -107,14 +107,7 @@
       <section class="finalizacao">
         <div class="container">
           <div class="finalizar-compra">
-            
-            <% carrinho.forEach(produto => { %>
-                <input type="hidden" name="id" value="<%= produto.id %>">
-                <input type="hidden" name="imagem" value="<%= produto.imagem %>">
-                <input type="hidden" name="nome" value="<%= produto.nome %>">
-                <input type="hidden" name="preco" value="<%= produto.preco %>">
-                <input type="hidden" name="total" value="<%= total %>">
-                <% }) %>
+                <input type="hidden" name="total" value="<%= total.toFixed(2) %>">
                 <button type="submit">Finalizar Compra</button>
               </form>
           </div>
