--- a/public/css/pedidoConcluido.css
+++ b/public/css/pedidoConcluido.css
@@ -32,7 +32,6 @@ h1 {
   font-size: 2rem;
 }
 
-
 .wrapper {
   height: 100%;
   display: flex;
@@ -44,4 +43,42 @@ h1 {
 
 .wrapper h3 {
   font-size: 2.8rem;
+}
+
+.produto-selecionado {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  gap: 7rem;
+  margin-block: 2rem;
+  border-bottom: 1px solid black;
+}
+
+.descricao-produto {
+  width: 30rem;
+  font-size: 1.8rem;
+}
+
+.descricao-produto h2 {
+  font-size: 2.8rem;
+}
+.preco {
+  padding-right: 5rem;
+  text-align: end;
+}
+
+.preco h2 {
+  font-size: 2.8rem;
+}
+
+.subtotal {
+  font-size: 2.8rem;
+  font-weight: 300;
+  text-align: end;
+  margin-right: 14rem;
+  margin-block: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: -4rem;
 }
