--- a/public/css/produtos.css
+++ b/public/css/produtos.css
@@ -66,6 +66,9 @@ main {
 .galeria-prod .img-destaque {
     width: 400px;
     height: 400px;
+    max-width: 400px;
+    max-height: 400px;
+    object-fit:contain;
 }
 
 .produto-main {
