fix: ajuste de bugs de execução

--- a/views/home/produtos.ejs
+++ b/views/home/produtos.ejs
@@ -13,7 +13,7 @@
                         <img src="<%=produto.imagem%>" alt="<%=produto.descricao%>" >
                         <img src="<%=produto.imagem%>" alt="<%=produto.descricao%>" >
                     </div>
-                    <img class="img-destaque" src="<%=produtos.imagem%>" alt="<%produtos.nome%>" >
+                    <img class="img-destaque" src="<%=produto.imagem%>" alt="<%produto.nome%>" >
                 </div>
 
                 <div class="produto-main">
@@ -25,8 +25,8 @@
                         <span>DE R$3.000,00</span>
                         <h4>Por <%=produto.preco%></h4>
                     </div>
-                    <h3><%=produtos.categoria%></h3>
-                    <p><%=produtos.descricao%></p>
+                    <h3><%=produto.categoria%></h3>
+                    <p><%=produto.descricao%></p>
                     <!-- produto em si entra aqui -->
                     <h3>Informacoes para compra</h3>
                 <!--     <form action="" method="post">
