--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -16,12 +16,10 @@
             <% produtos.forEach(produto=>{ %>
                 <div class="card">
                     <a class="" href="/produtos/<%=produto.id %>">
-                        <img src="<%=produto.imagem%>" width="150" height="130" alt=""></img>
+                        <img src="/images/produtos/<%=produto.imagem%>" width="150" height="130" alt=""></img>
                         <p>
-                            <% if (produto.nome.length> 20) { %>
-                                <%= produto.nome.substring(0, 20) %>...
-                                    <% } %>
-                        </p>
+                                <%= `${produto.nome.substring(0, 20)}...` %>
+                        </p>  
                         <p>
                             <%=produto.preco%>
                         </p>
