--- a/views/adm/painelAdmin.ejs
+++ b/views/adm/painelAdmin.ejs
@@ -47,7 +47,7 @@
                     <th scope="row">
                         <%= produto.id %>
                     </th>
-                    <td><img class="thumb" src="<%= produto.imagem %>" alt="" width="100px" height="100px">
+                    <td><img class="thumb" src="/images/produtos/<%=produto.imagem %>" alt="" width="100px" height="100px">
                     </td>
                     <td>
                         <%= produto.nome %>
