update: Ajuste de botão search

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -34,9 +34,8 @@ header {
 }
 
 .search {
-    margin-left: 75px;
     display: flex;
-    align-items: center;
+    align-items: flex-end;
 
     font-size: 1.6rem;
 }
