--- a/views/home/carrinho.ejs
+++ b/views/home/carrinho.ejs
@@ -20,7 +20,7 @@
               <div class="wrapper">
               <div class="produto-selecionado">
               <img 
-              src="<%= produto.imagem %>" 
+              src="/images/produtos/<%= produto.imagem %>" 
               alt="<%= produto.nome %>" 
               width="150px"
               height="150px">
