feature: Gerenciamento de adm

--- a/views/adm/adicionarProduto.ejs
+++ b/views/adm/adicionarProduto.ejs
@@ -9,16 +9,14 @@
       <div class="cadastro">
       <form action="/adm/adicionar-produto" method="POST" enctype="multipart/form-data">
         <input type="text" name="nome" id="" placeholder="Nome do Produto">
-          <input type="number" name="preco" min="1" step="any" placeholder="Preço">
+          <input type="number" name="preco" min="1" step="5.2" placeholder="Preço">
           <input type="number" name="desconto" min="1" step="any" placeholder="Preço com desconto">
           <input type="number" name="estoque" min="1" step="any" placeholder="Estoque">
           <select name="categoria" id="categoria" placeholder="Categorias">
             <option value="" disabled>Selecione uma categoria</option>
-            <option value="computadores">Computadores</option>
-            <option value="notebooks">Notebooks</option>
-            <option value="celulares">Celulares</option>
-            <option value="televisores">Televisores</option>
-            <option value="acessorios">Acessórios</option>
+            <% categorias.forEach(categoria => { %>
+              <option value="<%= categoria.id %>"><%= categoria.name %></option>
+            <% }) %>
           </select>
         <label for="imagem">Adicionar foto</label>
         <input type="file" name="imagem" id="imagem">
