--- a/views/adm/detalhes.ejs
+++ b/views/adm/detalhes.ejs
@@ -12,11 +12,11 @@
             <div class="div-topo">
                 <div class="galeria-prod">
                     <div class="galeria-agrupada">
-                        <img src="<%=produtos.imagem%>" alt="<%=produtos.descricao%>">
-                        <img src="<%=produtos.imagem%>" alt="<%=produtos.descricao%>">
-                        <img src="<%=produtos.imagem%>" alt="<%=produtos.descricao%>">
+                        <img src="/images/produtos/<%=produtos.imagem%>" alt="<%=produtos.descricao%>">
+                        <img src="/images/produtos/<%=produtos.imagem%>" alt="<%=produtos.descricao%>">
+                        <img src="/images/produtos/<%=produtos.imagem%>" alt="<%=produtos.descricao%>">
                     </div>
-                    <img class="img-destaque" src="<%=produtos.imagem%>" alt="<%produtos.nome%>">
+                    <img class="img-destaque" src="/images/produtos/<%=produtos.imagem%>" alt="<%produtos.nome%>">
                 </div>
 
                 <div class="produto-main">
