--- a/views/adm/painelAdmin.ejs
+++ b/views/adm/painelAdmin.ejs
@@ -1,8 +1,8 @@
-<link rel="stylesheet" href="/css/painelAdmin.css">
-<!-- <link rel="stylesheet" href="/css/header.css"> -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-  integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"> 
-  <title>Painel do admin</title>
+integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+<link rel="stylesheet" href="/css/painelAdmin.css">
+<link rel="stylesheet" href="/css/headerLogado.css">
+<title>Painel do admin</title>
 
 
 
@@ -29,50 +29,49 @@
       </div>
     </div>
     <div class="container div-table">
-     
+
       <table class="table table-light table-striped table-bordered ">
         <thead>
-            <tr>
-                <th scope="col">Identificador</th>
-                <th scope="col">imagem</th>
-                <th scope="col">Nome</th>
-                <th scope="col">Preço</th>
-                <th scope="col">Ativo</th>
-                <th scope="col">Ações</th>
-            </tr>
+          <tr>
+            <th scope="col">Identificador</th>
+            <th scope="col">imagem</th>
+            <th scope="col">Nome</th>
+            <th scope="col">Preço</th>
+            <th scope="col">Ativo</th>
+            <th scope="col">Ações</th>
+          </tr>
         </thead>
         <tbody>
-            <% produtos.forEach(produto=> { %>
-                <tr>
-                    <th scope="row">
-                        <%= produto.id %>
-                    </th>
-                    <td><img class="thumb" src="/images/produtos/<%=produto.imagem %>" alt="" width="100px" height="100px">
-                    </td>
-                    <td>
-                        <%= produto.nome %>
-                    </td>
-                    <td>R$ <%= produto.preco %>
-                    </td>
-                    <td>
-                        <%= produto.ativo ? "Habilitado" : "Desabilitado" %>
-                    </td>
-                    <td>
-                        <a href="/adm/produto/detalhes/<%= produto.id %>" type="button"
-                            class="btn btn-primary"><i class="bi bi-door-open"></i></a>
-                        <a href="/adm/<%= produto.id %>/editar-produto" type="button"
-                            class="btn btn-secondary"><i class="bi bi-pencil"></i></a>
-                        
-                            <a href="/adm/deletar-produto/<%= produto.id %>">
-                            <i class="bi bi-trash"></i>
-                            </a>          
-                       
-                    </td>
-                </tr>
-                <% }) %>
+          <% produtos.forEach(produto=> { %>
+            <tr>
+              <th scope="row">
+                <%= produto.id %>
+              </th>
+              <td><img class="thumb" src="/images/produtos/<%=produto.imagem %>" alt="" width="100px" height="100px">
+              </td>
+              <td>
+                <%= produto.nome %>
+              </td>
+              <td>R$ <%= produto.preco %>
+              </td>
+              <td>
+                <%= produto.ativo ? "Habilitado" : "Desabilitado" %>
+              </td>
+              <td>
+                <a href="/adm/produto/detalhes/<%= produto.id %>" type="button" class="btn btn-primary"><i
+                    class="bi bi-door-open"></i></a>
+                <a href="/adm/<%= produto.id %>/editar-produto" type="button" class="btn btn-secondary"><i
+                    class="bi bi-pencil"></i></a>
+
+                <a href="/adm/deletar-produto/<%= produto.id %>" type="button" class="btn btn-danger"><i
+                    class="bi bi-trash-fill"></i></a>
+
+              </td>
+            </tr>
+            <% }) %>
 
         </tbody>
-    </table>
+      </table>
 
     </div>
   </main>
