fix: Ajuste de header

--- a/public/css/addEditProduto.css
+++ b/public/css/addEditProduto.css
@@ -41,18 +41,20 @@ section {
      margin-top: 3rem;
      gap: 2.5rem;
      font-size: 2rem;
- }
-
- .cadastro form input,
- .cadastro form select {
-  width: 70%;
-  height: 4rem;
-  margin-inline: auto;
-  border-radius: .8rem;
-  padding: 2rem;
-  font-size: 1.8rem;
- }
-
+    }
+    
+    
+    .cadastro form input,
+    .cadastro form select,
+    .cadastro form option{
+      width: 70%;
+      height: 4.4rem;
+      margin-inline: auto;
+      border-radius: .8rem;
+      padding: 1rem;
+      font-size: 1.8rem;
+    }
+    
 input[type="file"] {
   display: none;
 }
