--- a/views/adm/painelAdmin.ejs
+++ b/views/adm/painelAdmin.ejs
@@ -1,80 +1,80 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+  integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/painelAdmin.css">
 <link rel="stylesheet" href="/css/headerLogado.css">
 <title>Painel do admin</title>
 
-
+<!-- <script src="/javascrip/loader.js"></script> -->
 
 <%- include('../partials/header') %>
-
   <main class="container">
-    <div class=".container div-top">
+    <div class="container div-top">
       <h1>Ola, <%= locals.usuario.nome %> Seja Bem-vindo!</h1>
       <div class="row">
         <div class="col botoes-adm">
           <h2>O que gostaria de fazer?</h2>
           <a href="/adm/adicionar-produto"><button>Adicionar Novo Produto</button></a>
-          <!-- <button>Editar Produto</button>
-                <button>Remover Produto</button> -->
         </div>
         <div class="col div-grafico">
-          <h1>Grafico pizza</h1>
-          <img src="/images/grafico-pizza.png" alt="" width="200rem" height="200rem">
+          <div id="donutchart" "></div>
         </div>
-        <div class="col div-grafico">
-          <h1>Produtos mais vendidos</h1>
-          <img src="/images/grafico-barra.png" alt="" width="200rem" height="200rem">
+        <div class=" col div-grafico">
+            <div id="chart_div"></div>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="container div-table">
+      <div class="container div-table">
 
-      <table class="table table-light table-striped table-bordered ">
-        <thead>
-          <tr>
-            <th scope="col">Identificador</th>
-            <th scope="col">imagem</th>
-            <th scope="col">Nome</th>
-            <th scope="col">Preço</th>
-            <th scope="col">Ativo</th>
-            <th scope="col">Ações</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% produtos.forEach(produto=> { %>
+        <table class="table table-light table-striped table-bordered ">
+          <thead>
             <tr>
-              <th scope="row">
-                <%= produto.id %>
-              </th>
-              <td><img class="thumb" src="/images/produtos/<%=produto.imagem %>" alt="" width="100px" height="100px">
-              </td>
-              <td>
-                <%= produto.nome %>
-              </td>
-              <td>R$ <%= produto.preco %>
-              </td>
-              <td>
-                <%= produto.ativo ? "Habilitado" : "Desabilitado" %>
-              </td>
-              <td>
-                <a href="/adm/produto/detalhes/<%= produto.id %>" type="button" class="btn btn-primary"><i
-                    class="bi bi-door-open"></i></a>
-                <a href="/adm/<%= produto.id %>/editar-produto" type="button" class="btn btn-secondary"><i
-                    class="bi bi-pencil"></i></a>
-
-                <a href="/adm/deletar-produto/<%= produto.id %>" type="button" class="btn btn-danger"><i
-                    class="bi bi-trash-fill"></i></a>
-
-              </td>
+              <th scope="col">Identificador</th>
+              <th scope="col">imagem</th>
+              <th scope="col">Nome</th>
+              <th scope="col">Preço</th>
+              <th scope="col">Ativo</th>
+              <th scope="col">Ações</th>
             </tr>
-            <% }) %>
+          </thead>
+          <tbody>
+            <% produtos.forEach(produto=> { %>
+              <tr>
+                <th scope="row">
+                  <%= produto.id %>
+                </th>
+                <td><img class="thumb" src="/images/produtos/<%=produto.imagem %>" alt="" width="100px" height="100px">
+                </td>
+                <td>
+                  <%= produto.nome %>
+                </td>
+                <td>R$ <%= produto.preco %>
+                </td>
+                <td>
+                  <%= produto.ativo ? "Habilitado" : "Desabilitado" %>
+                </td>
+                <td>
+                  <a href="/adm/produto/detalhes/<%= produto.id %>" type="button" class="btn btn-primary"><i
+                      class="bi bi-door-open"></i></a>
+                  <a href="/adm/<%= produto.id %>/editar-produto" type="button" class="btn btn-secondary"><i
+                      class="bi bi-pencil"></i></a>
 
-        </tbody>
-      </table>
+                  <a href="/adm/deletar-produto/<%= produto.id %>" type="button" class="btn btn-danger"><i
+                      class="bi bi-trash-fill"></i></a>
 
-    </div>
+                </td>
+              </tr>
+              <% }) %>
+
+          </tbody>
+        </table>
+
+      </div>
   </main>
+  <script src="/javascript/chart.js"></script>
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+  <script src="https://cdn.anychart.com/releases/v8/js/anychart-base.min.js"></script>
+  <script src="https://cdn.anychart.com/releases/v8/js/anychart-ui.min.js"></script>
+  <script src="https://cdn.anychart.com/releases/v8/js/anychart-exports.min.js"></script>
   </body>
 
   </html>
