--- a/views/adm/painelAdmin.ejs
+++ b/views/adm/painelAdmin.ejs
@@ -50,7 +50,7 @@
                 <td>R$ <%= produto.preco %>
                 </td>
                 <td>
-                  <%= produto.ativo ? "Habilitado" : "Desabilitado" %>
+                  <%= produto.ativo=='on' ? "Habilitado" : "Desabilitado" %>
                 </td>
                 <td>
                   <a href="/adm/produto/detalhes/<%= produto.id %>" type="button" class="btn btn-primary"><i
