--- a/views/home/pedidoConcluido.ejs
+++ b/views/home/pedidoConcluido.ejs
@@ -22,20 +22,20 @@
       <section class="container">
         <div class="wrapper">
         <h3>Resumo da Compra</h3>
-        <h4> Número do pedido: <%=pedido.usuario_id%> </h4>
+        <h4> Número do pedido: <%=pedido.id%> </h4>
         
-               <% pedido.forEach(item => { %>
+               <% pedido.produtos.forEach(produto => { %>
                 <div class="produto-selecionado">
                   <img 
-                  src="<%= item.imagem %>" 
-                  alt="<%= item.nome %>" 
+                  src="<%= produto.imagem %>" 
+                  alt="<%= produto.nome %>" 
                   width="150px"
                   height="150px">
                 <div class="descricao-produto">
-                  <h2><%= item.nome %></h2>
+                  <h2><%= produto.nome %></h2>
                 </div>
                 <div class="preco">
-                  <p><%= item.preco %></p>
+                  <p><%= produto.preco %></p>
                 </div>
 
               </div>
