--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -27,4 +27,17 @@
             </div>
         </div>
     </div>
+    <!-- início do preloader -->
+  <div id="preloader">
+    <div class="inner">
+       <!-- HTML DA ANIMAÇÃO MUITO LOUCA DO SEU PRELOADER! -->
+       <div>
+          <div><img width="100px" src="/images/logo-gif_4_semFundo.gif" alt="" srcset=""></div>
+          <div></div>
+          <div></div>                    
+       </div>
+    </div>
+</div>
+<!-- fim do preloader --> 
+    <script src="/javascript/preloader.js"></script>
 </footer>
