--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -312,7 +312,7 @@
                     <div class="card">
 
                         <i class="bi bi-stars"></i>
-                        <a class="" href="/produtos/<%=produto.id %>">
+                        <a class="" href="images/produtos/<%=produto.id %>">
                         <img src="<%= produto.imagem%>" width="150" height="130" alt="">
 
                         <% if (produto.nome.length> 20) { %>
