fix: conserto de imagem de pedidos concluidos

--- a/views/home/pedidoConcluido.ejs
+++ b/views/home/pedidoConcluido.ejs
@@ -27,7 +27,7 @@
                <% pedido.produtos.forEach(produto => { %>
                 <div class="produto-selecionado">
                   <img 
-                  src="<%= produto.imagem %>" 
+                  src="/images/produtos/<%=produto.imagem%>"
                   alt="<%= produto.nome %>" 
                   width="150px"
                   height="150px">
