--- a/views/adm/adicionarProduto.ejs
+++ b/views/adm/adicionarProduto.ejs
@@ -22,6 +22,8 @@
         <div class="ativo">
         <input type="checkbox" name="ativo" id="ativo" placeholder="Produto ativo">
         <label for="">Ativo</label>
+        <input type="checkbox" name="destaques" id="destaques" placeholder="Produto destaque">
+        <label for="">Destaque</label>
       </div>
         <textarea name="descricao" cols="30" rows="10" placeholder="Descrição do Produto"></textarea>
         <div class="buttons">
