--- a/views/adm/painelAdmin.ejs
+++ b/views/adm/painelAdmin.ejs
@@ -70,6 +70,20 @@
 
       </div>
   </main>
+
+   <!-- início do preloader -->
+   <div id="preloader">
+    <div class="inner">
+        <!-- HTML DA ANIMAÇÃO MUITO LOUCA DO SEU PRELOADER! -->
+        <div>
+            <div><img width="100px" src="/images/logo-gif_4_semFundo.gif" alt="" srcset=""></div>
+            <div></div>
+            <div></div>
+        </div>
+    </div>
+</div>
+<!-- fim do preloader -->
+  <script src="/javascript/preloader.js"></script>
   <script src="/javascript/chart.js"></script>
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
   <script src="https://cdn.anychart.com/releases/v8/js/anychart-base.min.js"></script>
