--- a/views/home/categorias.ejs
+++ b/views/home/categorias.ejs
@@ -7,57 +7,10 @@
 
             
                 <div class="card">
-                    <img src="images/tv.jpg" width="150" height="130" alt="">
+                    <a class="" href="/categoria/<%=categoria.id %>"> </a>
+                    <img src="images/headsets.jpg" width="150" height="130" alt="">
 
-                    <p>Televisores<br>
-
-                    </p>
-
-                </div>
-            
-
-            <div class="card">
-                <img src="images/microfone.jpg" width="150" height="130" alt="">
-
-                <p> Acessórios <br>
-                </p>
-
-            </div>
-            
-
-            <div class="card">
-                <img src="images/CADEIRAS.png" width="150" height="130" alt="">
-
-                <p> Cadeiras Gamer <br>
-                </p>
-
-            </div>
-            
-
-            <div class="card">
-                <img src="images/CONECTIVIDADE.png" width="150" height="130" alt="">
-
-                <p> Conectividades <br>
-                </p>
-
-            </div>
-            
-
-            <div class="card">
-                <img src="images/COMPUTADORES.png" width="150" height="130" alt="">
-
-                <p> Computadores <br>
-                </p>
-
-            </div>
-            
-
-
-            
-                <div class="card">
-                    <img src="images/tv.jpg" width="150" height="130" alt="">
-
-                    <p>Televisores<br>
+                    <p>Headset<br>
 
                     </p>
 
@@ -65,41 +18,39 @@
             
 
             <div class="card">
-                <img src="images/microfone.jpg" width="150" height="130" alt="">
+                <img src="images/teclados.jpg" width="150" height="130" alt="">
 
-                <p> Acessórios <br>
+                <p> Teclados <br>
                 </p>
 
             </div>
             
 
             <div class="card">
-                <img src="images/CADEIRAS.png" width="150" height="130" alt="">
+                <img src="images/notebooks.jpg" width="150" height="130" alt="">
 
-                <p> Cadeiras Gamer <br>
+                <p> Notebooks <br>
                 </p>
 
             </div>
             
 
             <div class="card">
-                <img src="images/CONECTIVIDADE.png" width="150" height="130" alt="">
+                <img src="images/celulares.jpg" width="150" height="130" alt="">
 
-                <p> Conectividades <br>
+                <p> Telefones <br>
                 </p>
 
             </div>
             
 
             <div class="card">
-                <img src="images/COMPUTADORES.png" width="150" height="130" alt="">
+                <img src="images/video games.jpg" width="150" height="130" alt="">
 
-                <p> Computadores <br>
+                <p> Video-Games <br>
                 </p>
 
             </div>
-            
-
         </section>
 
     </main>
