--- a/public/css/stylehome.css
+++ b/public/css/stylehome.css
@@ -14,8 +14,6 @@ body{
 .banner{
     display: flex;
     justify-content: space-evenly;
-    margin-inline: 7rem;
-    gap: 10rem;
     margin-block: 4rem;
 }
 .banner img{
@@ -24,8 +22,8 @@ body{
     
 
 .container{
+    margin: auto;
     width: 95vw;
-    margin-inline: auto;
     margin-block: 2rem;
     
 }
@@ -170,7 +168,6 @@ body{
 }
 .img{
     margin-top: 5rem;
-    margin-left: 10rem;
 }
 
 /* ========================= Mais Procurados ========================== */
@@ -188,7 +185,6 @@ footer {
     width: 100%;
     height: 20vh;
     background: linear-gradient(90deg, rgba(36,36,36,1) 0%, rgba(0,175,239,1) 90%);
-    box-shadow: 0px 8px 10px grey;
     margin-top: 15rem;
 }
 
