--- a/views/adm/painelAdmin.ejs
+++ b/views/adm/painelAdmin.ejs
@@ -47,7 +47,7 @@
                 <td>
                   <%= produto.nome %>
                 </td>
-                <td>R$ <%= produto.preco %>
+                <td>R$ <%= produto.preco.toFixed(2) %>
                 </td>
                 <td>
                   <%= produto.ativo=='on' ? "Habilitado" : "Desabilitado" %>
