--- a/views/home/lista.ejs
+++ b/views/home/lista.ejs
@@ -6,17 +6,17 @@
 
     <main class="container">
 
-        <section class="destaques">
+        <section class="destaques card-lista">
 
             <% produtos.forEach(produto=>{ %>
-                <div class="card">
+                <div class="card ">
                     <a class="" href="/produtos/<%=produto.id %>">
                         <img src="/images/produtos/<%=produto.imagem%>" width="150" height="130" alt=""></img>
                         <p>
                                 <%= `${produto.nome.substring(0, 20)}...` %>
                         </p>  
                         <p>
-                            <%=produto.preco%>
+                            R$ <%=produto.preco.toFixed(2)%>
                         </p>
                         <span>À vista no pix</span>
                         <div>
