--- a/views/adm/adicionarProduto.ejs
+++ b/views/adm/adicionarProduto.ejs
@@ -9,7 +9,7 @@
       <div class="cadastro">
       <form action="/adm/adicionar-produto" method="POST" enctype="multipart/form-data">
         <input type="text" name="nome" id="" placeholder="Nome do Produto">
-          <input type="number" name="preco" min="1" step="5.2" placeholder="Preço">
+          <input type="number" name="preco" min="1" step="any" placeholder="Preço">
           <input type="number" name="estoque" min="1" step="any" placeholder="Estoque">
           <select name="categoria" id="categoria" placeholder="Categorias">
             <option value="" disabled>Selecione uma categoria</option>
