--- a/views/usuario/painelUsuario.ejs
+++ b/views/usuario/painelUsuario.ejs
@@ -4,42 +4,16 @@
 <%- include('../partials/header') %> 
 
 <main>
-  
+  <h1>Pesquise ou clique no número para obter detalhes do pedido</h1>
   <h1>Acompanhe seu pedido</h1>
   <section class="codigo">
     <h2>Código do pedido</h2>
-    <form action="/usuario" method='POST' class="form_search">
+    <form action="/usuario" method='GET' class="form_search">
       <input type="search" name="search" id="search" placeholder="Pesquisar">
       <button name="btn-1" id="btn" type="submit">
         <i class="fa-solid fa-magnifying-glass"></i>
       </button>
     </section>
-    <section class="forma-pgto">
-      <% if (pedidos.id) { %> 
-        <h4>Produtos do pedido n. <%= pedidos.id %></h4>
-        <div class='container'>
-    <div class="wrapper">
-      <% order.produtos.forEach(produto => { %>
-        <div class="produto-selecionado">
-          <img src="<%= produto.imagem %>" alt="<%= produto.nome %>">
-          <div class="descricao-produto">
-            <h2><%= produto.nome %></h2>
-          </div>
-        </div>
-        <div class="preco">
-          <h2><%= produto.preco %></h2>
-        </div>
-      </div>
-      <% }) %>
-      <div class="subtotal">
-        <p>Subtotal: <b> <%= pedidos.total %> </b> </p>
-      </div>
-    </div>
-  </div>
-  <% } else { %>
-    <h4>Pesquise para obter detalhes do pedido</h4>
-    <% } %> 
-  </section>
   <section class="historico">
     <h2>Histórico de Pedidos</h2>
     <div class="container">
